login/logout added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,16 +11,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css" />
   <link rel="stylesheet" href="/stylesheets/app.css" />
 </head>
+
 <body>
   <div class="ui fixed inverted menu">
     <div class="ui container">
       <div class="header item"><i class="code icon"></i>Blog Site</div>
       <a href="/" class="item">Home</a>
-      <a href="/blogs/new" class="item">New Post</a>
-      <div class="right menu">
-        <a href="/blogs/admin" class="ui item">
-          admin
-        </a>
-      </div>
+
+      <% if(isSignedIn){ %>
+        <a href="/blogs/new" class="item">New Post</a>
+        <div class="right menu">
+          <a href="/logout" class="ui item">
+            logout
+          </a>
+        </div>
+       <% } else{ %>  
+
+        <div class="right menu">
+          <a href="/blogs/admin" class="ui item">
+            admin
+          </a>
+        </div>
+         
+      <% } %>
+      
     </div>
   </div>
