--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,11 +27,7 @@
               </div>
             </fieldset>
             <div class="">
-              <input
-                class="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib"
-                type="submit"
-                value="Sign in"
-              />
+              <a href = "/loggedIn">signin</a>
             </div>
           </div>
         </main>
