--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
 
+
 <div class="ui main text container segment">
   <div class="ui huge header"><%= blog.title %></div>
   <div class="ui top attached">
@@ -11,10 +12,13 @@
       <div class="description">
         <p><%- blog.body %></p>
       </div>
-      <a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+      <% if(isSignedIn){ %>
+         <a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
       <form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="POST">
         <button class="ui red basic button">Delete</button>
       </form>
+       <% } %>
+      
     </div>
   </div>
 </div>
