--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
 <body>
   <div class="ui fixed inverted menu">
     <div class="ui container">
-      <div class="header item"><i class="code icon"></i>Blog Site</div>
+      <div class="header item"><i class="code"></i>Magmag</div>
       <a href="/" class="item">Home</a>
 
       <% if(isSignedIn){ %>
